--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "scripts": {
     "start": "env-cmd -e local npm run start:local",
-    "start:local": "export HTTPS=true && react-scripts start",
+    "start:local": "react-scripts start",
     "start:staging": "env-cmd -e staging npm run start:local",
     "start:production": "env-cmd -e production npm run start:local",
     "build": "react-scripts build",
@@ -49,6 +49,7 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
+    "jodit-react": "^1.0.66",
     "lodash.foreach": "^4.5.0",
     "lodash.toarray": "^4.4.0",
     "moment": "^2.27.0",
