--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -50,6 +50,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash.foreach": "^4.5.0",
+    "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.toarray": "^4.4.0",
     "moment": "^2.29.1",
