Prints the kickstand version during build

--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -11,7 +11,7 @@
     "start:staging": "env-cmd -e staging npm run start:local",
     "start:production": "env-cmd -e production npm run start:local",
     "build": "react-scripts build",
-    "build:local": "GENERATE_SOURCEMAP=false react-scripts build && cp _redirects build && cp -r build moped && mv moped build",
+    "build:local": "grep 'kickstand' package-lock.json && GENERATE_SOURCEMAP=false react-scripts build && cp _redirects build && cp -r build moped && mv moped build",
     "build:staging": "env-cmd -e staging npm run build:local",
     "build:production": "env-cmd -e production npm run build:local",
     "test": "react-scripts test",
