--- a/.github/workflows/atd_sqs_activity_log.yml
+++ b/.github/workflows/atd_sqs_activity_log.yml
@@ -8,14 +8,13 @@ on:
     branches:
       - master
       - production
-      -
     paths:
       - "moped-data-events/activity_log/**"
-#  pull_request:
-#    branches:
-#      - master
-#    paths:
-#      - "moped-data-events/activity_log/**"
+  pull_request:
+    branches:
+      - "4895-sg-activity-log-aws-sqs"
+    paths:
+      - "moped-data-events/activity_log/**"
 
 jobs:
   build:
@@ -51,4 +50,4 @@ jobs:
           echo "PWD: $(pwd)"
           echo "PR_NUMBER: ${PR_NUMBER}"
           source $(pwd)/.github/workflows/aws-lambda-helper.sh
-          deploy_event_functions
+          deploy_event_function "activity_log"
