--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@apollo/react-hooks": "^4.0.0",
     "@hookform/devtools": "^2.2.1",
     "@hookform/resolvers": "^1.0.1",
