Ignore any other docker-compose in the database

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ moped-database/config/*.yaml
 !moped-database/config/hasura.local.yaml
 !moped-database/config/hasura.cognito.staging.env
 moped-database/hasura.current_environment.yaml
+moped-database/docker-compose-*.yaml
 
 # Logs
 logs
