--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -52,6 +52,7 @@
     "lodash.foreach": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.toarray": "^4.4.0",
+    "material-table": "^1.69.2",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
