Renames the requirement file in dockerfile

--- a/moped-api/Dockerfile
+++ b/moped-api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8-slim
 EXPOSE 5000
 # We copy just the requirements.txt first to leverage Docker cache
-COPY ./requirements/dev.txt /app/requirements.txt
+COPY requirements/development.txt /app/requirements.txt
 
 WORKDIR /app
 
