Deploys to development stage for any PR not main or prod

--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -10,7 +10,12 @@ on:
       - production
     paths:
       - "moped-api/**"
-
+  pull_request:
+    branches:
+      - "!main"
+      - "!production"
+    paths:
+      - "moped-api/**"
 jobs:
   build:
     name: Build
