--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -11,9 +11,9 @@ on:
     paths:
       - "moped-api/**"
   pull_request:
-    branches:
-      - "!main"
-      - "!production"
+    branches-ignore:
+      - main
+      - production
     paths:
       - "moped-api/**"
 jobs:
