Installs Hasura CLI

--- a/.github/workflows/atd_moped_db_docs.yml
+++ b/.github/workflows/atd_moped_db_docs.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           sudo apt-get install -y python3-setuptools
           pip3 install awscli boto3 virtualenv
+          curl -L https://github.com/hasura/graphql-engine/raw/stable/cli/get.sh | bash
       # Run the shell commands using the AWS environment variables
       - name: "Build & Publish Database Documentation"
         env:
