--- a/moped-data-events/activity_log/requirements.txt
+++ b/moped-data-events/activity_log/requirements.txt
@@ -1,6 +1,12 @@
+boto3==1.16.59
+botocore==1.19.59
 Cerberus==1.3.2
 certifi==2020.4.5.1
 chardet==3.0.4
 idna==2.9
+jmespath==0.10.0
+python-dateutil==2.8.1
 requests==2.23.0
+s3transfer==0.3.4
+six==1.15.0
 urllib3==1.25.9
