Update workflow for testing in AWS

--- a/.github/workflows/atd_sqs_activity_log.yml
+++ b/.github/workflows/atd_sqs_activity_log.yml
@@ -8,7 +8,8 @@ on:
     branches:
       - master
       - production
-      - "4895-sg-activity-log-aws-sqs"
+      - "5036-sg-diff-handler"
+
     paths:
       - "moped-data-events/activity_log/**"
       - ".github/workflows/atd_sqs_activity_log.yml"
