--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -15,6 +15,8 @@ on:
       - main
       - production
     paths:
+      - ".github/workflows/atd_moped_api.yml"
+      - ".github/workflows/aws-moped-api-helper.sh"
       - "moped-api/**"
 jobs:
   build:
