Change pr branch pattern

--- a/.github/workflows/atd_cognito_hooks_build.yml
+++ b/.github/workflows/atd_cognito_hooks_build.yml
@@ -11,9 +11,8 @@ on:
     paths:
       - "moped-auth/**"
   pull_request:
-    branches-ignore:
-      - main
-      - production
+    branches:
+      - "**-sg-**"
     paths:
       - ".github/workflows/atd_cognito_hooks_build.yml"
       - ".github/workflows/aws-cognito-helper.sh"
