--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -54,6 +54,7 @@
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.toarray": "^4.4.0",
+    "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
